--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
         <h2>Мои хобби</h2>
         <ol>
-            <li>Блогерр</li>
+            <li>Блоггер</li>
             <li>Скоростное вождение автомобиля</li>
             <li>Спорт: MMA, лыжи</li>
             <li>Путешествия</li>
