--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <table cellspacing="15px">
             <tr>
                 <td>
-                    <img src="/foto.jpg" alt="Фото аватар" width="200px">
+                    <img src="foto.jpg" alt="Фото аватар" width="200px">
                 </td>
                 <td>
                     <h1>Владилен Минин</h1>
